button color changed and vivek bindra intro added

--- a/index.html
+++ b/index.html
@@ -24,6 +24,23 @@
                 <h6 class="text-center pt-4">Secrets that generated me over 250K+ followers, and 1000’s of leads for FREE bringing in thousands of dollars on a monthly basis from Linkedin.</h6>
             </div>
             <div class="col-lg-12 col-md-12 pt-4 d-flex justify-content-center">
+                <img style="border-radius: 20px;" src="images/poster.jpeg" class="img-fluid">
+            </div>
+            <div class="col-lg-12 col-md-12 pt-4">
+                <a data-toggle="modal" data-target="#myModal" class="btn btn-primary d-block">
+                    <h4>Register Now</h4>
+                </a>
+            </div>
+        </div>
+    </section>
+
+    <!-- Section 2 -->
+    <section id="section-2" class="container-fluid">
+        <div class="row">
+            <div class="col-lg-12 col-md-12 pt-4">
+                <h1 class="text-center">How to start a startup?</h1><h4 class="text-center underline"></h4>
+            </div>
+            <div class="col-lg-12 col-md-12 pt-4 d-flex justify-content-center">
                 <video onclick="this.paused ? this.play() : this.pause();" poster="images/poster.png" width="100%"
                     height="100%" style="border-radius:8px">
                     <source src="videos/1.mp4" type="video/mp4">
@@ -54,43 +71,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-12 col-md-12 pb-2">
-                        <div class="card text-center">
-                            <div class="card-body">
-                                <p class="card-text">Featured in</p>
-                                <img class="img-fluid" src="images/section-1/1.png">
-                            </div>
-                        </div>
-                    </div>
                 </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Section 2 -->
-    <section class="container-fluid">
-        <div class="row">
-            <div class="col-lg-12 col-md-12 pt-4">
-                <h1 class="text-center">How to start a startup?</h1><h4 class="text-center underline"></h4>
-            </div>
-            <div class="col-lg-6 col-md-6 pt-4">
-                <p><img class="img-fluid" src="images/tick.svg"> Steps to build on your startup idea</p>
-                <p><img class="img-fluid" src="images/tick.svg"> Learn to manage investor relations</p>
-                <p><img class="img-fluid" src="images/tick.svg"> Know fundamentals behinf fund raising</p>
-                <p><img class="img-fluid" src="images/tick.svg"> Learn how to hire your team</p>
-                <p><img class="img-fluid" src="images/tick.svg"> Know about ESOPs and how to use them to hire great
-                    talent</p>
-                <p><img class="img-fluid" src="images/tick.svg"> Learn ways to market your products in the case of low
-                    budget</p>
-                <p><img class="img-fluid" src="images/tick.svg"> Avoid mistakes that leads to startup failure</p>
-            </div>
-            <div class="col-lg-6 col-md-6 pt-4">
-                <video onclick="this.paused ? this.play() : this.pause();" poster="images/poster.png" width="100%"
-                    height="100%" style="border-radius:8px">
-                    <source src="videos/1.mp4" type="video/mp4">
-                    <object data="videos/1.mp4" width="100%" height="100%">
-                    </object>
-                </video>
             </div>
         </div>
     </section>
@@ -404,7 +385,7 @@
             <div class="col-lg-12 col-md-12 pt-4">
                 <div class="row">
                     <div class="col-lg-3 col-12 col-md-12 pb-2 d-flex justify-content-center">
-                        <img style="border-radius:10px" class="img-fluid" src="images/hero.png">
+                        <img style="border-radius:10px" class="img-fluid" src="images/hero.jpg">
                     </div>
                     <div class="col-lg-2 col-6 col-md-3 pb-2">
                         <div class="card text-center">
@@ -445,8 +426,25 @@
                 </div>
             </div>
             <div class="col-lg-12 col-md-12 pt-4">
-                <p>Hi, I am Vivek Bindra, I turn startups into profitable businesses, growth consult for brands and
-                    help them use the internet to increase profitability and their overall bottom lines.</p>
+                <p>Dr Vivek Bindra is a Revolutionary Entrepreneur, an Internationally Acclaimed Motivational Speaker and a Business Coach.
+                    <br>Known for Creating Most Sought after Content on Leadership Development, which is Helping People across the Globe in achieving their Business Goals.
+                    <br>Author of 10 High Power Motivational Books, which are available on Flipkart and Amazon.</p>
+            </div>
+            <div class="row">
+                <div class="col-lg-8 col-md-8 pt-4">
+                    <h4>YouTube</h4>
+                    <p><img class="img-fluid" width="15px" src="images/arrow.png"> Owner of World’s Most Subscribed Entrepreneurship YouTube Channel.
+                        <br><img class="img-fluid" width="15px" src="images/arrow.png"> With 10.1 Million Active Subscribers on YouTube, he is one of the World’s Greatest Influencers.
+                        <br><img class="img-fluid" width="15px" src="images/arrow.png"> Known for Creating a Free Learning University on YouTube.</p>
+                    <h4>Awards & Honours</h4>
+                    <p><img class="img-fluid" width="15px" src="images/arrow.png"> Bestowed with the Honorary Title of ‘Think Tank of Corporate Asia’ by World Leadership Federation, Dubai.
+                        <br><img class="img-fluid" width="15px" src="images/arrow.png"> Awarded the Best Leadership Trainer in Asia title by Marshall Goldsmith at the World HRD Congress.
+                        <br><img class="img-fluid" width="15px" src="images/arrow.png"> Awarded with India’s Greatest Brands and Leaders – Pride of the Nation Award in a ceremonial function hosted by PricewaterhouseCoopers (PwC)
+                        <br><img class="img-fluid" width="15px" src="images/arrow.png"> Awarded the Best CEO Coach in India by Times of India – Speaking Tree.</p>
+                </div>
+                <div class="col-lg-4 col-md-4 pt-4 d-flex justify-content-center">
+                    <img class="img-fluid" src="images/hero.png">
+                </div>
             </div>
             <div class="col-lg-12 col-md-12 pt-4">
                 <a data-toggle="modal" data-target="#myModal" class="btn btn-primary d-block">
