--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project</title>
+    <title>HOW TO START A STARTUP</title>
     <link rel="stylesheet" href="css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
@@ -77,6 +77,78 @@
     </section>
 
     <!-- Section 3 -->
+    <section id="bg-2" class="container-fluid">
+        <div class="row">
+            <div class="col-lg-12 col-md-12 pt-4">
+                <h1 class="text-center">Meet Our Billionaire Professor</h1><h4 class="text-center underline"></h4>
+            </div>
+        </div>
+    </section>
+
+    <!-- Section 4 -->
+    <section class="container-fluid">
+        <div class="row">
+            <div class="col-lg-12 col-md-12 pt-4">
+                <h1 class="text-center">Our Esteemed Clients</h1><h4 class="text-center underline"></h4>
+            </div>
+            <div class="col-2 pt-4 d-flex justify-content-center">
+                <img src="images/clients/1.jpg" class="img-fluid">
+            </div>
+            <div class="col-2 pt-4 d-flex justify-content-center">
+                <img src="images/clients/2.png" class="img-fluid">
+            </div>
+            <div class="col-2 pt-4 d-flex justify-content-center">
+                <img src="images/clients/3.svg" class="img-fluid">
+            </div>
+            <div class="col-2 pt-4 d-flex justify-content-center">
+                <img src="images/clients/4.png" class="img-fluid">
+            </div>
+            <div class="col-2 pt-4 d-flex justify-content-center">
+                <img src="images/clients/5.png" class="img-fluid">
+            </div>
+            <div class="col-2 pt-4 m-auto">
+                <img src="images/clients/6.png" class="img-fluid">
+            </div>
+            <div class="col-2 pt-4 m-auto">
+                <img src="images/clients/7.png" class="img-fluid">
+            </div>
+            <div class="col-2 pt-4 d-flex justify-content-center">
+                <img src="images/clients/8.png" class="img-fluid">
+            </div>
+            <div class="col-2 pt-4 m-auto">
+                <img src="images/clients/9.png" class="img-fluid">
+            </div>
+            <div class="col-2 pt-4 d-flex justify-content-center">
+                <img src="images/clients/10.png" class="img-fluid">
+            </div>
+            <div class="col-2 pt-4 d-flex justify-content-center">
+                <img src="images/clients/11.jpg" class="img-fluid">
+            </div>
+            <div class="col-2 pt-4 d-flex justify-content-center">
+                <img src="images/clients/12.jpg" class="img-fluid">
+            </div>
+            <div class="col-2 pt-4 d-flex justify-content-center">
+                <img src="images/clients/13.png" class="img-fluid">
+            </div>
+            <div class="col-2 pt-4 d-flex justify-content-center">
+                <img src="images/clients/14.jpg" class="img-fluid">
+            </div>
+            <div class="col-2 pt-4 d-flex justify-content-center">
+                <img src="images/clients/15.png" class="img-fluid">
+            </div>
+            <div class="col-2 pt-4 d-flex justify-content-center">
+                <img src="images/clients/16.jpg" class="img-fluid">
+            </div>
+            <div class="col-2 pt-4 d-flex justify-content-center">
+                <img src="images/clients/17.png" class="img-fluid">
+            </div>
+            <div class="col-2 pt-4 d-flex justify-content-center">
+                <img src="images/clients/18.jpg" class="img-fluid">
+            </div>
+        </div>
+    </section>
+
+    <!-- Section 5 -->
     <section id="bg-2" class="section-3 container-fluid">
         <div class="row">
             <div class="col-lg-12 col-md-12 pt-4">
@@ -124,7 +196,7 @@
         </div>
     </section>
 
-    <!-- Section 4 -->
+    <!-- Section 6 -->
     <section class="container-fluid">
         <div class="row">
             <div class="col-lg-12 col-md-12 pt-4">
@@ -278,7 +350,7 @@
         </div>
     </section>
 
-    <!-- Section 4 -->
+    <!-- Section 7 -->
     <section id="bg-2" class="container-fluid">
         <div class="row">
             <div class="col-lg-12 col-md-12 pt-4">
@@ -339,7 +411,7 @@
         </div>
     </section>
 
-    <!-- Section 5 -->
+    <!-- Section 8 -->
     <section id="section-5" class="container-fluid">
         <div class="row">
             <div class="col-lg-12 col-md-12 pt-4">
@@ -376,7 +448,7 @@
         </div>
     </section>
 
-    <!-- Section 7 -->
+    <!-- Section 9 -->
     <section id="bg-1" class="container-fluid">
         <div class="row">
             <div class="col-lg-12 col-md-12 pt-4">
