--- a/index.html
+++ b/index.html
@@ -21,10 +21,9 @@
         <div class="row">
             <div class="col-lg-12 col-md-12 pt-4">
                 <h1 class="text-center">HOW TO START A STARTUP</h1><h4 class="text-center underline"></h4>
-                <h6 class="text-center pt-4">Secrets that generated me over 250K+ followers, and 1000’s of leads for FREE bringing in thousands of dollars on a monthly basis from Linkedin.</h6>
             </div>
             <div class="col-lg-12 col-md-12 pt-4 d-flex justify-content-center">
-                <img style="border-radius: 20px;" src="images/poster.jpeg" class="img-fluid">
+                <img style="border-radius: 20px;" src="images/poster.png" class="img-fluid">
             </div>
             <div class="col-lg-12 col-md-12 pt-4">
                 <a data-toggle="modal" data-target="#myModal" class="btn btn-primary d-block">
@@ -41,7 +40,7 @@
                 <h1 class="text-center">How to start a startup?</h1><h4 class="text-center underline"></h4>
             </div>
             <div class="col-lg-12 col-md-12 pt-4 d-flex justify-content-center">
-                <video onclick="this.paused ? this.play() : this.pause();" poster="images/poster.png" width="100%"
+                <video onclick="this.paused ? this.play() : this.pause();" poster="images/thumbnail.png" width="100%"
                     height="100%" style="border-radius:8px">
                     <source src="videos/1.mp4" type="video/mp4">
                     <object data="videos/1.mp4" width="100%" height="100%">
