--- a/index.html
+++ b/index.html
@@ -7,37 +7,72 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HOW TO START A STARTUP</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="https://www.badabusiness.com/assets/ibcenquiry/css/style.css">
+    <link rel="stylesheet" type="text/css" href="https://www.badabusiness.com/assets/ibcenquiry/css/media.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js"
+        integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh"
+        crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"
+        integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ"
+        crossorigin="anonymous"></script>
 </head>
 
 <body>
 
-    <!-- Section 1 -->
-    <section id="bg-1" class="container-fluid">
+    <div class="first-div formcont bg_sales">
         <div class="row">
-            <div class="col-lg-12 col-md-12 pt-4">
-                <h1 class="text-center">HOW TO START A STARTUP</h1><h4 class="text-center underline"></h4>
-            </div>
-            <div class="col-lg-12 col-md-12 pt-4 d-flex justify-content-center">
-                <img style="border-radius: 20px;" src="images/poster.png" class="img-fluid">
-            </div>
-            <div class="col-lg-12 col-md-12 pt-4">
-                <a data-toggle="modal" data-target="#myModal" class="btn btn-primary d-block">
-                    <h4>Register Now</h4>
-                </a>
+            <div class="col-12">
+                <a href=""><img src="https://www.badabusiness.com/assets/ibcenquiry/images/logo_BB.png" alt="logo" class="bblogo" style="max-width: 100%;"></a><br>
             </div>
         </div>
-    </section>
+        <div class="container-fluid nogutter form_sal">
+            <div class="row nogutter deskkview">
+                <div class="col-lg-9 col-sm-12">
+                    <img src="https://www.badabusiness.com/assets/ibcenquiry/images/mob_web_bnrrr.png"
+                        style="max-width: 100%;" class="mobsview">
+                </div>
+                <div class="col-lg-3 col-sm-12 d-flex justify-content-center">
+                    <form method="post" autocomplete="off" name="google-sheet" class="formsales1" accept-charset="utf-8">
+                        <h1>Get In Touch With Us</h1>
+                        <div class="form-group">
+                            <input type="text" required="required" name="name" class="form-control curve_corner"
+                                id="exampleInputName" aria-describedby="Name" placeholder="Name" />
+                        </div>
+                        <div class="form-group">
+                            <input type="text" required="required" name="phone" class="form-control curve_corner"
+                                id="exampleInputPhone" aria-describedby="Phone" placeholder="Phone" />
+                        </div>
+                        <div class="form-group">
+                            <input type="email" required="required" class="form-control curve_corner" name="email"
+                                id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Email" />
+                        </div>
+                        <div class="uk-margin-small-top">
+                            <label class="uk-text-small">
+                                <input name="py_dd_status" class="uk-checkbox checkbox_val" type="checkbox">&nbsp;&nbsp;I agree to the <a target="_BLANK" href="https://www.badabusiness.com/terms-and-conditions">terms and conditions</a>.
+                            </label>
+                        </div>
+                        <div class="form-group text-center">
+                            <button class="btn btn-outline-secondary align-center" type="submit">
+                                Enquire Now
+                            </button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <!-- Section 2 -->
     <section id="section-2" class="container-fluid">
         <div class="row">
             <div class="col-lg-12 col-md-12 pt-4">
-                <h1 class="text-center">How to start a startup?</h1><h4 class="text-center underline"></h4>
+                <h1 class="text-center">How to start a startup?</h1>
+                <h4 class="text-center underline"></h4>
             </div>
             <div class="col-lg-12 col-md-12 pt-4 d-flex justify-content-center">
                 <video onclick="this.paused ? this.play() : this.pause();" poster="images/thumbnail.png" width="100%"
@@ -79,7 +114,8 @@
     <section id="bg-2" class="container-fluid">
         <div class="row">
             <div class="col-lg-12 col-md-12 pt-4">
-                <h1 class="text-center">Meet Our Billionaire Professor</h1><h4 class="text-center underline"></h4>
+                <h1 class="text-center">Meet Our Billionaire Professor</h1>
+                <h4 class="text-center underline"></h4>
             </div>
         </div>
     </section>
@@ -88,7 +124,8 @@
     <section class="container-fluid">
         <div class="row">
             <div class="col-lg-12 col-md-12 pt-4">
-                <h1 class="text-center">Our Esteemed Clients</h1><h4 class="text-center underline"></h4>
+                <h1 class="text-center">Our Esteemed Clients</h1>
+                <h4 class="text-center underline"></h4>
             </div>
             <div class="col-2 pt-4 d-flex justify-content-center">
                 <img src="images/clients/1.jpg" class="img-fluid">
@@ -151,7 +188,8 @@
     <section id="bg-2" class="section-3 container-fluid">
         <div class="row">
             <div class="col-lg-12 col-md-12 pt-4">
-                <h1 class="text-center">Time Is Running Out. Grab Your Spot Fast!</h1><h4 class="text-center underline"></h4>
+                <h1 class="text-center">Time Is Running Out. Grab Your Spot Fast!</h1>
+                <h4 class="text-center underline"></h4>
             </div>
             <div class="row pt-4">
                 <div class="col-lg-3 col-6 col-md-3 pb-2 pt-2">
@@ -199,7 +237,8 @@
     <section class="container-fluid">
         <div class="row">
             <div class="col-lg-12 col-md-12 pt-4">
-                <h1 class="text-center">If you register, What is your benifits?</h1><h4 class="text-center underline"></h4>
+                <h1 class="text-center">If you register, What is your benifits?</h1>
+                <h4 class="text-center underline"></h4>
             </div>
             <div class="col-lg-6 col-md-6 pt-4">
                 <div class="card benefit-card">
@@ -353,7 +392,8 @@
     <section id="bg-2" class="container-fluid">
         <div class="row">
             <div class="col-lg-12 col-md-12 pt-4">
-                <h1 class="text-center">Still wondering if this opportunity is for you?</h1><h4 class="text-center underline"></h4>
+                <h1 class="text-center">Still wondering if this opportunity is for you?</h1>
+                <h4 class="text-center underline"></h4>
             </div>
             <div class="col-lg-12 col-md-12 pt-4">
                 <div class="row">
@@ -414,7 +454,8 @@
     <section id="section-5" class="container-fluid">
         <div class="row">
             <div class="col-lg-12 col-md-12 pt-4">
-                <h1 class="text-center">You are not the first one to join</h1><h4 class="text-center underline"></h4>
+                <h1 class="text-center">You are not the first one to join</h1>
+                <h4 class="text-center underline"></h4>
             </div>
             <div class="col-lg-12 col-md-12 pt-4">
                 <div class="row">
@@ -451,7 +492,8 @@
     <section id="bg-1" class="container-fluid">
         <div class="row">
             <div class="col-lg-12 col-md-12 pt-4">
-                <h1 class="text-center">Meet Your Guru</h1><h4 class="text-center underline"></h4>
+                <h1 class="text-center">Meet Your Guru</h1>
+                <h4 class="text-center underline"></h4>
             </div>
             <div class="col-lg-12 col-md-12 pt-4">
                 <div class="row">
@@ -497,21 +539,34 @@
                 </div>
             </div>
             <div class="col-lg-12 col-md-12 pt-4">
-                <p>Dr Vivek Bindra is a Revolutionary Entrepreneur, an Internationally Acclaimed Motivational Speaker and a Business Coach.
-                    <br>Known for Creating Most Sought after Content on Leadership Development, which is Helping People across the Globe in achieving their Business Goals.
-                    <br>Author of 10 High Power Motivational Books, which are available on Flipkart and Amazon.</p>
+                <p>Dr Vivek Bindra is a Revolutionary Entrepreneur, an Internationally Acclaimed Motivational Speaker
+                    and a Business Coach.
+                    <br>Known for Creating Most Sought after Content on Leadership Development, which is Helping People
+                    across the Globe in achieving their Business Goals.
+                    <br>Author of 10 High Power Motivational Books, which are available on Flipkart and Amazon.
+                </p>
             </div>
             <div class="row">
                 <div class="col-lg-8 col-md-8 pt-4">
                     <h4>YouTube</h4>
-                    <p><img class="img-fluid" width="15px" src="images/arrow.png"> Owner of World’s Most Subscribed Entrepreneurship YouTube Channel.
-                        <br><img class="img-fluid" width="15px" src="images/arrow.png"> With 10.1 Million Active Subscribers on YouTube, he is one of the World’s Greatest Influencers.
-                        <br><img class="img-fluid" width="15px" src="images/arrow.png"> Known for Creating a Free Learning University on YouTube.</p>
+                    <p><img class="img-fluid" width="15px" src="images/arrow.png"> Owner of World’s Most Subscribed
+                        Entrepreneurship YouTube Channel.
+                        <br><img class="img-fluid" width="15px" src="images/arrow.png"> With 10.1 Million Active
+                        Subscribers on YouTube, he is one of the World’s Greatest Influencers.
+                        <br><img class="img-fluid" width="15px" src="images/arrow.png"> Known for Creating a Free
+                        Learning University on YouTube.
+                    </p>
                     <h4>Awards & Honours</h4>
-                    <p><img class="img-fluid" width="15px" src="images/arrow.png"> Bestowed with the Honorary Title of ‘Think Tank of Corporate Asia’ by World Leadership Federation, Dubai.
-                        <br><img class="img-fluid" width="15px" src="images/arrow.png"> Awarded the Best Leadership Trainer in Asia title by Marshall Goldsmith at the World HRD Congress.
-                        <br><img class="img-fluid" width="15px" src="images/arrow.png"> Awarded with India’s Greatest Brands and Leaders – Pride of the Nation Award in a ceremonial function hosted by PricewaterhouseCoopers (PwC)
-                        <br><img class="img-fluid" width="15px" src="images/arrow.png"> Awarded the Best CEO Coach in India by Times of India – Speaking Tree.</p>
+                    <p><img class="img-fluid" width="15px" src="images/arrow.png"> Bestowed with the Honorary Title of
+                        ‘Think Tank of Corporate Asia’ by World Leadership Federation, Dubai.
+                        <br><img class="img-fluid" width="15px" src="images/arrow.png"> Awarded the Best Leadership
+                        Trainer in Asia title by Marshall Goldsmith at the World HRD Congress.
+                        <br><img class="img-fluid" width="15px" src="images/arrow.png"> Awarded with India’s Greatest
+                        Brands and Leaders – Pride of the Nation Award in a ceremonial function hosted by
+                        PricewaterhouseCoopers (PwC)
+                        <br><img class="img-fluid" width="15px" src="images/arrow.png"> Awarded the Best CEO Coach in
+                        India by Times of India – Speaking Tree.
+                    </p>
                 </div>
                 <div class="col-lg-4 col-md-4 pt-4 d-flex justify-content-center">
                     <img class="img-fluid" src="images/hero.png">
@@ -525,13 +580,13 @@
         </div>
     </section>
 
-      <!-- Modal -->
+    <!-- Modal -->
     <div class="modal fade" id="myModal" role="dialog">
         <div class="modal-dialog">
-    
+
             <!-- Modal content-->
             <div class="modal-content">
-                <form method="post" autocomplete="off" name="google-sheet" class="formsales" accept-charset="utf-8">
+                <form method="post" autocomplete="off" name="google-sheet" class="formsales1" accept-charset="utf-8">
                     <h1>Get In Touch With Us</h1>
                     <div class="form-group">
                         <input type="text" required="required" name="name" class="form-control curve_corner"
@@ -545,6 +600,11 @@
                         <input type="email" required="required" class="form-control curve_corner" name="email"
                             id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Email" />
                     </div>
+                    <div class="uk-margin-small-top">
+                        <label class="uk-text-small">
+                            <input name="py_dd_status" class="uk-checkbox checkbox_val" type="checkbox">&nbsp;&nbsp;I agree to the <a target="_BLANK" href="https://www.badabusiness.com/terms-and-conditions">terms and conditions</a>.
+                        </label>
+                    </div>
                     <div class="form-group text-center">
                         <button class="btn btn-outline-secondary align-center" type="submit">
                             Enquire Now
@@ -553,45 +613,45 @@
                 </form>
             </div>
         </div>
-    </section>
+        </section>
 
 
-    <script>
-        (function () {
-            const second = 1000,
-                minute = second * 60,
-                hour = minute * 60,
-                day = hour * 24;
+        <script>
+            (function () {
+                const second = 1000,
+                    minute = second * 60,
+                    hour = minute * 60,
+                    day = hour * 24;
 
-            let birthday = "Aug 30, 2021 00:00:00",
-                countDown = new Date(birthday).getTime(),
-                x = setInterval(function () {
+                let birthday = "Aug 30, 2021 00:00:00",
+                    countDown = new Date(birthday).getTime(),
+                    x = setInterval(function () {
 
-                    let now = new Date().getTime(),
-                        distance = countDown - now;
+                        let now = new Date().getTime(),
+                            distance = countDown - now;
 
-                    document.getElementById("days").innerText = Math.floor(distance / (day)),
-                        document.getElementById("hours").innerText = Math.floor((distance % (day)) / (hour)),
-                        document.getElementById("minutes").innerText = Math.floor((distance % (hour)) / (minute)),
-                        document.getElementById("seconds").innerText = Math.floor((distance % (minute)) / second);
-                    //seconds
-                }, 0)
-        }());
-    </script>
-    <script>
-        const scriptURL = 'https://script.google.com/macros/s/AKfycbz52Sc7GW4j37sqcxmCNhe11dtghwgfASTx_IrF9KE7-lMP2Dh0P4t2JkGVj5CAqq6tyg/exec'
-        const form = document.forms['google-sheet']
+                        document.getElementById("days").innerText = Math.floor(distance / (day)),
+                            document.getElementById("hours").innerText = Math.floor((distance % (day)) / (hour)),
+                            document.getElementById("minutes").innerText = Math.floor((distance % (hour)) / (minute)),
+                            document.getElementById("seconds").innerText = Math.floor((distance % (minute)) / second);
+                        //seconds
+                    }, 0)
+            }());
+        </script>
+        <script>
+            const scriptURL = 'https://script.google.com/macros/s/AKfycbz52Sc7GW4j37sqcxmCNhe11dtghwgfASTx_IrF9KE7-lMP2Dh0P4t2JkGVj5CAqq6tyg/exec'
+            const form = document.forms['google-sheet']
 
-        form.addEventListener('submit', e => {
-            e.preventDefault()
-            fetch(scriptURL, { method: 'POST', body: new FormData(form) })
-                .then(response => window.location="thankyou.html")
-                .catch(error => console.error('Error!', error.message))
-        })
-    </script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
-        crossorigin="anonymous"></script>
+            form.addEventListener('submit', e => {
+                e.preventDefault()
+                fetch(scriptURL, { method: 'POST', body: new FormData(form) })
+                    .then(response => window.location = "thankyou.html")
+                    .catch(error => console.error('Error!', error.message))
+            })
+        </script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
+            crossorigin="anonymous"></script>
 </body>
 
 </html>
