--- a/thankyou.html
+++ b/thankyou.html
@@ -17,7 +17,7 @@
 <body style="background-color: #02131b;">
 
     <!-- Section 1 -->
-    <section id="section-1" class="container-fluid">
+    <section id="bg-1" class="container-fluid">
         <div class="row">
             <div class="col-lg-12 col-md-12 pt-4">
                 <h1 class="text-center">Thank you, You are all set..
