--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" type="text/css" href="https://www.badabusiness.com/assets/ibcenquiry/css/media.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.1.0.js"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
         integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
         crossorigin="anonymous"></script>
@@ -68,13 +69,14 @@
     </div>
 
     <!-- Section 2 -->
-    <section id="section-2" class="container-fluid">
+    <section id="bg-2" class="container-fluid">
         <div class="row">
             <div class="col-lg-12 col-md-12 pt-4">
-                <h1 class="text-center">How to start a startup?</h1>
+                <h1 class="text-center">HOW TO START A STARTUP?</h1>
                 <h4 class="text-center underline"></h4>
+                <h5 class="text-center pt-4">The step by step guide to build your startup ideas, know <strong> fundamentals behind fund raising</strong> and avoid mistakes that leads to startup failure.</h5>
             </div>
-            <div class="col-lg-12 col-md-12 pt-4 d-flex justify-content-center">
+            <div class="col-lg-6 col-md-12 pt-4 d-flex justify-content-center">
                 <video onclick="this.paused ? this.play() : this.pause();" poster="images/thumbnail.png" width="100%"
                     height="100%" style="border-radius:8px">
                     <source src="videos/1.mp4" type="video/mp4">
@@ -82,104 +84,46 @@
                     </object>
                 </video>
             </div>
-            <div class="col-lg-12 col-md-12 pt-4">
-                <a data-toggle="modal" data-target="#myModal" class="btn btn-primary d-block">
-                    <h4>Register Now</h4>
-                </a>
-            </div>
-            <div class="col-lg-12 col-md-12 pt-4">
+            <div class="col-lg-6 col-md-12 pt-4 d-flex justify-content-center align-items-center">
                 <div class="row">
-                    <div class="col-lg-6 col-md-6 pb-2">
+                    <div class="col-lg-12 col-md-12 pb-2">
+                        <h6>~ Learn to manage investor relations</h6>
+                        <h6>~ Learns ways to market yout products in the case of low budget</h6>
+                        <h6>~ Know about ESOPs and how to use them to hire great talent</h6>
+                    </div>
+                    <div class="col-lg-6 col-md-12 pb-2">
                         <div class="card text-center">
                             <div class="card-body">
-                                <h5 class="card-title"><img class="img-fluid" src="images/section-1/1.svg"> 18000+</h5>
-                                <p class="card-text">have attended the workshop</p>
+                                <h5 class="card-title count"><img class="img-fluid" src="images/section-1/1.svg"> 18000+</h5>
+                                <p class="card-text">have attended the programme</p>
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-6 col-md-6 pb-2">
+                    <div class="col-lg-6 col-md-12 pb-2 ">
                         <div class="card text-center">
                             <div class="card-body">
-                                <h5 class="card-title"><img class="img-fluid" src="images/section-1/2.svg"> 9.8/10</h5>
-                                <p class="card-text">Average rating</p>
+                                <h5 class="card-title count"><img class="img-fluid" src="images/section-1/2.svg"> 9.8/10</h5>
+                                <p class="card-text">Average <br>rating</p>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
+            <div class="col-lg-12 col-md-12 pt-4">
+                <a data-toggle="modal" data-target="#myModal" class="btn btn-primary d-block">
+                    <h4>Enquire Now to Start Your Startup</h4>
+                    <p>and avoid mistakes that leads to startup failure</p>
+                </a>
+            </div>
         </div>
     </section>
 
     <!-- Section 3 -->
-    <section id="bg-2" class="container-fluid">
+    <section class="container-fluid">
         <div class="row">
             <div class="col-lg-12 col-md-12 pt-4">
                 <h1 class="text-center">Meet Our Billionaire Professor</h1>
                 <h4 class="text-center underline"></h4>
-            </div>
-        </div>
-    </section>
-
-    <!-- Section 4 -->
-    <section class="container-fluid">
-        <div class="row">
-            <div class="col-lg-12 col-md-12 pt-4">
-                <h1 class="text-center">Our Esteemed Clients</h1>
-                <h4 class="text-center underline"></h4>
-            </div>
-            <div class="col-2 pt-4 d-flex justify-content-center">
-                <img src="images/clients/1.jpg" class="img-fluid">
-            </div>
-            <div class="col-2 pt-4 d-flex justify-content-center">
-                <img src="images/clients/2.png" class="img-fluid">
-            </div>
-            <div class="col-2 pt-4 d-flex justify-content-center">
-                <img src="images/clients/3.svg" class="img-fluid">
-            </div>
-            <div class="col-2 pt-4 d-flex justify-content-center">
-                <img src="images/clients/4.png" class="img-fluid">
-            </div>
-            <div class="col-2 pt-4 d-flex justify-content-center">
-                <img src="images/clients/5.png" class="img-fluid">
-            </div>
-            <div class="col-2 pt-4 m-auto">
-                <img src="images/clients/6.png" class="img-fluid">
-            </div>
-            <div class="col-2 pt-4 m-auto">
-                <img src="images/clients/7.png" class="img-fluid">
-            </div>
-            <div class="col-2 pt-4 d-flex justify-content-center">
-                <img src="images/clients/8.png" class="img-fluid">
-            </div>
-            <div class="col-2 pt-4 m-auto">
-                <img src="images/clients/9.png" class="img-fluid">
-            </div>
-            <div class="col-2 pt-4 d-flex justify-content-center">
-                <img src="images/clients/10.png" class="img-fluid">
-            </div>
-            <div class="col-2 pt-4 d-flex justify-content-center">
-                <img src="images/clients/11.jpg" class="img-fluid">
-            </div>
-            <div class="col-2 pt-4 d-flex justify-content-center">
-                <img src="images/clients/12.jpg" class="img-fluid">
-            </div>
-            <div class="col-2 pt-4 d-flex justify-content-center">
-                <img src="images/clients/13.png" class="img-fluid">
-            </div>
-            <div class="col-2 pt-4 d-flex justify-content-center">
-                <img src="images/clients/14.jpg" class="img-fluid">
-            </div>
-            <div class="col-2 pt-4 d-flex justify-content-center">
-                <img src="images/clients/15.png" class="img-fluid">
-            </div>
-            <div class="col-2 pt-4 d-flex justify-content-center">
-                <img src="images/clients/16.jpg" class="img-fluid">
-            </div>
-            <div class="col-2 pt-4 d-flex justify-content-center">
-                <img src="images/clients/17.png" class="img-fluid">
-            </div>
-            <div class="col-2 pt-4 d-flex justify-content-center">
-                <img src="images/clients/18.jpg" class="img-fluid">
             </div>
         </div>
     </section>
@@ -227,7 +171,8 @@
             </div>
             <div class="col-lg-12 col-md-12 pt-4">
                 <a data-toggle="modal" data-target="#myModal" class="btn btn-primary d-block">
-                    <h4>Register Now</h4>
+                    <h4>Enquire Now to Start Your Startup</h4>
+                    <p>and avoid mistakes that leads to startup failure</p>
                 </a>
             </div>
         </div>
@@ -574,7 +519,8 @@
             </div>
             <div class="col-lg-12 col-md-12 pt-4">
                 <a data-toggle="modal" data-target="#myModal" class="btn btn-primary d-block">
-                    <h4>Register Now</h4>
+                    <h4>Enquire Now to Start Your Startup</h4>
+                    <p>and avoid mistakes that leads to startup failure</p>
                 </a>
             </div>
         </div>
@@ -613,45 +559,83 @@
                 </form>
             </div>
         </div>
-        </section>
+    </div>
 
+    <!-- Section 4 -->
+    <section class="container-fluid">
+        <div class="row">
+            <div class="col-lg-12 col-md-12 pt-4">
+                <h1 class="text-center">Our Esteemed Clients</h1>
+                <h4 class="text-center underline"></h4>
+            </div>
+            <div class="col-2 pt-4 m-auto">
+                <img src="images/clients/2.png" class="img-fluid">
+            </div>
+            <div class="col-2 pt-4 m-auto">
+                <img src="images/clients/4.png" class="img-fluid">
+            </div>
+            <div class="col-2 pt-4 m-auto">
+                <img src="images/clients/8.png" class="img-fluid">
+            </div>
+            <div class="col-2 pt-4 m-auto">
+                <img src="images/clients/11.jpg" class="img-fluid">
+            </div>
+            <div class="col-2 pt-4 m-auto">
+                <img src="images/clients/14.jpg" class="img-fluid">
+            </div>
+            <div class="col-2 pt-4 m-auto">
+                <img src="images/clients/15.png" class="img-fluid">
+            </div>
+        </div>
+    </section>
 
-        <script>
-            (function () {
-                const second = 1000,
-                    minute = second * 60,
-                    hour = minute * 60,
-                    day = hour * 24;
+    <script>
+        (function () {
+            const second = 1000,
+                minute = second * 60,
+                hour = minute * 60,
+                day = hour * 24;
 
-                let birthday = "Aug 30, 2021 00:00:00",
-                    countDown = new Date(birthday).getTime(),
-                    x = setInterval(function () {
+            let birthday = "Aug 30, 2021 00:00:00",
+                countDown = new Date(birthday).getTime(),
+                x = setInterval(function () {
 
-                        let now = new Date().getTime(),
-                            distance = countDown - now;
+                    let now = new Date().getTime(),
+                        distance = countDown - now;
 
-                        document.getElementById("days").innerText = Math.floor(distance / (day)),
-                            document.getElementById("hours").innerText = Math.floor((distance % (day)) / (hour)),
-                            document.getElementById("minutes").innerText = Math.floor((distance % (hour)) / (minute)),
-                            document.getElementById("seconds").innerText = Math.floor((distance % (minute)) / second);
-                        //seconds
-                    }, 0)
-            }());
-        </script>
-        <script>
-            const scriptURL = 'https://script.google.com/macros/s/AKfycbz52Sc7GW4j37sqcxmCNhe11dtghwgfASTx_IrF9KE7-lMP2Dh0P4t2JkGVj5CAqq6tyg/exec'
-            const form = document.forms['google-sheet']
+                    document.getElementById("days").innerText = Math.floor(distance / (day)),
+                        document.getElementById("hours").innerText = Math.floor((distance % (day)) / (hour)),
+                        document.getElementById("minutes").innerText = Math.floor((distance % (hour)) / (minute)),
+                        document.getElementById("seconds").innerText = Math.floor((distance % (minute)) / second);
+                    //seconds
+                }, 0)
+        }());
+    </script>
+    <script>
+        $({ Counter: 0 }).animate({
+            Counter: $('.Single').text()
+        }, {
+            duration: 4000,
+            easing: 'swing',
+            step: function() {
+                $('.Single').text(Math.ceil(this.Counter));
+            }
+        });
+    </script>
+    <script>
+        const scriptURL = 'https://script.google.com/macros/s/AKfycbz52Sc7GW4j37sqcxmCNhe11dtghwgfASTx_IrF9KE7-lMP2Dh0P4t2JkGVj5CAqq6tyg/exec'
+        const form = document.forms['google-sheet']
 
-            form.addEventListener('submit', e => {
-                e.preventDefault()
-                fetch(scriptURL, { method: 'POST', body: new FormData(form) })
-                    .then(response => window.location = "thankyou.html")
-                    .catch(error => console.error('Error!', error.message))
-            })
-        </script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
-            crossorigin="anonymous"></script>
+        form.addEventListener('submit', e => {
+            e.preventDefault()
+            fetch(scriptURL, { method: 'POST', body: new FormData(form) })
+                .then(response => window.location = "thankyou.html")
+                .catch(error => console.error('Error!', error.message))
+        })
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
