text style changes

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <section id="bg-2" class="container-fluid">
         <div class="row">
             <div class="col-lg-12 col-md-12 pt-4">
-                <h1 class="text-center">HOW TO START A STARTUP?</h1>
+                <h1 class="text-center">How To Start A Startup?</h1>
                 <h4 class="text-center underline"></h4>
                 <h5 class="text-center pt-4">The step by step guide to build your startup ideas, know <strong> fundamentals behind fund raising</strong> and avoid mistakes that leads to startup failure.</h5>
             </div>
@@ -132,7 +132,7 @@
     <section id="bg-2" class="section-3 container-fluid">
         <div class="row">
             <div class="col-lg-12 col-md-12 pt-4">
-                <h1 class="text-center">You are not the first one to join</h1>
+                <h1 class="text-center">You Are Not The First One To Join</h1>
                 <h4 class="text-center underline"></h4>
             </div>
             <div class="col-lg-12 col-md-12 pt-4">
@@ -170,7 +170,7 @@
     <section class="container-fluid">
         <div class="row">
             <div class="col-lg-12 col-md-12 pt-4">
-                <h1 class="text-center">If you register, What is your benifits?</h1>
+                <h1 class="text-center">If You Register, What Is Your Benifits?</h1>
                 <h4 class="text-center underline"></h4>
             </div>
             <div class="col-lg-6 col-md-6 pt-4">
@@ -325,7 +325,7 @@
     <section id="bg-2" class="container-fluid">
         <div class="row">
             <div class="col-lg-12 col-md-12 pt-4">
-                <h1 class="text-center">Still wondering if this opportunity is for you?</h1>
+                <h1 class="text-center">Still Wondering If This Opportunity Is For You?</h1>
                 <h4 class="text-center underline"></h4>
             </div>
             <div class="col-lg-12 col-md-12 pt-4">
