card-timer created

--- a/index.html
+++ b/index.html
@@ -393,32 +393,32 @@
             <div class="row pt-4">
                 <div class="col-lg-3 col-6 col-md-3 pb-2 pt-2">
                     <div class="card text-center">
-                        <div class="card-body">
-                            <h5 id="days" class="card-title"></h5>
+                        <div class="card-body card-timer">
+                            <h2 id="days" class="card-title"></h2>
                             <p class="card-text">Days</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-3 col-6 col-md-3 pb-2 pt-2">
                     <div class="card text-center">
-                        <div class="card-body">
-                            <h5 id="hours" class="card-title"></h5>
+                        <div class="card-body card-timer">
+                            <h2 id="hours" class="card-title"></h2>
                             <p class="card-text">Hours</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-3 col-6 col-md-3 pb-2 pt-2">
                     <div class="card text-center">
-                        <div class="card-body">
-                            <h5 id="minutes" class="card-title"></h5>
+                        <div class="card-body card-timer">
+                            <h2 id="minutes" class="card-title"></h2>
                             <p class="card-text">Minutes</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-3 col-6 col-md-3 pb-2 pt-2">
                     <div class="card text-center">
-                        <div class="card-body">
-                            <h5 id="seconds" class="card-title"></h5>
+                        <div class="card-body card-timer">
+                            <h2 id="seconds" class="card-title"></h2>
                             <p class="card-text">Seconds</p>
                         </div>
                     </div>
