--- a/index.html
+++ b/index.html
@@ -118,18 +118,8 @@
         </div>
     </section>
 
-    <!-- Section 3 -->
-    <section class="container-fluid">
-        <div class="row">
-            <div class="col-lg-12 col-md-12 pt-4">
-                <h1 class="text-center">Meet Our Billionaire Professor</h1>
-                <h4 class="text-center underline"></h4>
-            </div>
-        </div>
-    </section>
-
     <!-- Section 5 -->
-    <section id="bg-2" class="section-3 container-fluid">
+    <section class="section-3 container-fluid">
         <div class="row">
             <div class="col-lg-12 col-md-12 pt-4">
                 <h1 class="text-center">You Are Not The First One To Join</h1>
@@ -167,7 +157,7 @@
     </section>
 
     <!-- Section 6 -->
-    <section class="container-fluid">
+    <section id="bg-2" class="container-fluid">
         <div class="row">
             <div class="col-lg-12 col-md-12 pt-4">
                 <h1 class="text-center">If You Register, What Is Your Benifits?</h1>
@@ -322,7 +312,7 @@
     </section>
 
     <!-- Section 7 -->
-    <section id="bg-2" class="container-fluid">
+    <section class="container-fluid">
         <div class="row">
             <div class="col-lg-12 col-md-12 pt-4">
                 <h1 class="text-center">Still Wondering If This Opportunity Is For You?</h1>
@@ -384,7 +374,7 @@
     </section>
 
     <!-- Section 8 -->
-    <section id="section-5" class="container-fluid">
+    <section id="bg-2" class="section-8 container-fluid">
         <div class="row">
             <div class="col-lg-12 col-md-12 pt-4">
                 <h1 class="text-center">Time Is Running Out. Grab Your Spot Fast!</h1>
