--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <h5 class="text-center pt-4">Secrets to build your <strong>startup</strong>, to acquire first 1000 customer, <strong>raise funds</strong> and avoid mistakes that leads to <strong>startup failures</strong>.</h5>
             </div>
             <div class="col-lg-8 col-md-12 pt-4">
-                <video loop="true" autoplay="autoplay" controls="controls" poster="images/thumbnail.png" width="100%" height="100%">
+                <video loop="true" autoplay="autoplay" controls="controls" muted poster="images/thumbnail.png" width="100%" height="100%">
                     <source src="videos/1.mp4" type="video/mp4">
                     <object data="videos/1.mp4" width="100%" height="100%">
                     </object>
