timer improved in js

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <body>
 
-    
+
 
     <!-- Section 2 -->
     <section id="bg-1" class="container-fluid">
@@ -34,17 +34,21 @@
             <div class="col-lg-12 col-md-12 pt-4">
                 <h1 class="text-center">How To Start A Startup?</h1>
                 <h4 class="text-center underline"></h4>
-                <h5 class="text-center pt-4">Secrets to build your <strong>startup</strong>, to acquire first 1000 customer, <strong>raise funds</strong> and avoid mistakes that leads to <strong>startup failures</strong>.</h5>
+                <h5 class="text-center pt-4">Secrets to build your <strong>startup</strong>, to acquire first 1000
+                    customer, <strong>raise funds</strong> and avoid mistakes that leads to <strong>startup
+                        failures</strong>.</h5>
             </div>
             <div class="col-lg-8 col-md-12 pt-4">
-                <video loop="true" autoplay="autoplay" controls="controls" muted poster="images/thumbnail.png" width="100%" height="100%">
+                <video loop="true" autoplay="autoplay" controls="controls" muted poster="images/thumbnail.png"
+                    width="100%" height="100%">
                     <source src="videos/1.mp4" type="video/mp4">
                     <object data="videos/1.mp4" width="100%" height="100%">
                     </object>
                 </video>
             </div>
             <div id="pcol" class="col-lg-4 col-md-12 pt-4">
-                <form method="post" autocomplete="off" name="google-sheet" class="formsales1" id="pform" accept-charset="utf-8">
+                <form method="post" autocomplete="off" name="google-sheet" class="formsales1" id="pform"
+                    accept-charset="utf-8">
                     <h1>Get In Touch With Us</h1>
                     <div class="form-group">
                         <input type="text" required="required" name="name" class="form-control curve_corner"
@@ -60,7 +64,9 @@
                     </div>
                     <div class="uk-margin-small-top">
                         <label class="uk-text-small">
-                            <input name="py_dd_status" class="uk-checkbox checkbox_val" type="checkbox">&nbsp;&nbsp;I agree to the <a target="_BLANK" href="https://www.badabusiness.com/terms-and-conditions">terms and conditions</a>.
+                            <input name="py_dd_status" class="uk-checkbox checkbox_val" type="checkbox">&nbsp;&nbsp;I
+                            agree to the <a target="_BLANK"
+                                href="https://www.badabusiness.com/terms-and-conditions">terms and conditions</a>.
                         </label>
                     </div>
                     <div class="form-group text-center">
@@ -273,26 +279,25 @@
                 <div class="col-lg-6 col-md-6 pb-2">
                     <div class="card checkbox-card">
                         <div class="card-body">
-                            <input class="d-inline" type="checkbox" id="checkbox1" name="checkbox1"
-                                value="1">
-                            <p class="card-text d-inline">I want to build my successful startup but i have no idea where to start.</p>
+                            <input class="d-inline" type="checkbox" id="checkbox1" name="checkbox1" value="1">
+                            <p class="card-text d-inline">I want to build my successful startup but i have no idea where
+                                to start.</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-6 pb-2">
                     <div class="card checkbox-card">
                         <div class="card-body">
-                            <input class="d-inline" type="checkbox" id="checkbox1" name="checkbox1"
-                                value="1">
-                            <p class="card-text d-inline">I want to learn strategies that can help me to grow my existing startup</p>
+                            <input class="d-inline" type="checkbox" id="checkbox1" name="checkbox1" value="1">
+                            <p class="card-text d-inline">I want to learn strategies that can help me to grow my
+                                existing startup</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-6 pb-2">
                     <div class="card checkbox-card">
                         <div class="card-body">
-                            <input class="d-inline" type="checkbox" id="checkbox1" name="checkbox1"
-                                value="1">
+                            <input class="d-inline" type="checkbox" id="checkbox1" name="checkbox1" value="1">
                             <p class="card-text d-inline">I want to raise funds for my startup</p>
                         </div>
                     </div>
@@ -300,8 +305,7 @@
                 <div class="col-lg-6 col-md-6 pb-2">
                     <div class="card checkbox-card">
                         <div class="card-body">
-                            <input class="d-inline" type="checkbox" id="checkbox1" name="checkbox1"
-                                value="1">
+                            <input class="d-inline" type="checkbox" id="checkbox1" name="checkbox1" value="1">
                             <p class="card-text d-inline">I want to get my first 1000 customers</p>
                         </div>
                     </div>
@@ -309,8 +313,7 @@
                 <div class="col-lg-6 col-md-6 pb-2">
                     <div class="card checkbox-card">
                         <div class="card-body">
-                            <input class="d-inline" type="checkbox" id="checkbox1" name="checkbox1"
-                                value="1">
+                            <input class="d-inline" type="checkbox" id="checkbox1" name="checkbox1" value="1">
                             <p class="card-text d-inline">I want to avoid mistakes that leades to startup failure</p>
                         </div>
                     </div>
@@ -318,15 +321,16 @@
                 <div class="col-lg-6 col-md-6 pb-2">
                     <div class="card checkbox-card">
                         <div class="card-body">
-                            <input class="d-inline" type="checkbox" id="checkbox1" name="checkbox1"
-                                value="1">
+                            <input class="d-inline" type="checkbox" id="checkbox1" name="checkbox1" value="1">
                             <p class="card-text d-inline">I want to know how to scale my startup to next level</p>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="col-lg-12 col-md-12 pt-4">
-                <h5 class="text-center">If you checked any of the boxes above, then must <strong>Enquire Now</strong> to join <strong>How To Start A Startup Course</strong>.<br>If you don’t believe us, just look at the kind of <strong>results</strong> people getting from this course:</h5>
+                <h5 class="text-center">If you checked any of the boxes above, then must <strong>Enquire Now</strong> to
+                    join <strong>How To Start A Startup Course</strong>.<br>If you don’t believe us, just look at the
+                    kind of <strong>results</strong> people getting from this course:</h5>
             </div>
         </div>
     </section>
@@ -540,7 +544,9 @@
                     </div>
                     <div class="uk-margin-small-top">
                         <label class="uk-text-small">
-                            <input name="py_dd_status" class="uk-checkbox checkbox_val" type="checkbox">&nbsp;&nbsp;I agree to the <a target="_BLANK" href="https://www.badabusiness.com/terms-and-conditions">terms and conditions</a>.
+                            <input name="py_dd_status" class="uk-checkbox checkbox_val" type="checkbox">&nbsp;&nbsp;I
+                            agree to the <a target="_BLANK"
+                                href="https://www.badabusiness.com/terms-and-conditions">terms and conditions</a>.
                         </label>
                     </div>
                     <div class="form-group text-center">
@@ -582,36 +588,58 @@
     </section>
 
     <script>
-        (function () {
-            const second = 1000,
-                minute = second * 60,
-                hour = minute * 60,
-                day = hour * 24;
+        var curday;
+        var secTime;
+        var ticker;
 
-            let birthday = "Aug 30, 2021 00:00:00",
-                countDown = new Date(birthday).getTime(),
-                x = setInterval(function () {
+        function getSeconds() {
+            var nowDate = new Date();
+            var dy = 6; //Sunday through Saturday, 0 to 6
+            var countertime = new Date(nowDate.getFullYear(), nowDate.getMonth(), nowDate.getDate(), 20, 0, 0); //20 out of 24 hours = 8pm
 
-                    let now = new Date().getTime(),
-                        distance = countDown - now;
+            var curtime = nowDate.getTime(); //current time
+            var atime = countertime.getTime(); //countdown time
+            var diff = parseInt((atime - curtime) / 1000);
+            if (diff > 0) { curday = dy - nowDate.getDay() }
+            else { curday = dy - nowDate.getDay() - 1 } //after countdown time
+            if (curday < 0) { curday += 7; } //already after countdown time, switch to next week
+            if (diff <= 0) { diff += (86400 * 7) }
+            startTimer(diff);
+        }
 
-                    document.getElementById("days").innerText = Math.floor(distance / (day)),
-                        document.getElementById("hours").innerText = Math.floor((distance % (day)) / (hour)),
-                        document.getElementById("minutes").innerText = Math.floor((distance % (hour)) / (minute)),
-                        document.getElementById("seconds").innerText = Math.floor((distance % (minute)) / second);
-                    //seconds
-                }, 0)
-        }());
+        function startTimer(secs) {
+            secTime = parseInt(secs);
+            ticker = setInterval("tick()", 1000);
+            tick(); //initial count display
+        }
+
+        function tick() {
+            var secs = secTime;
+            if (secs > 0) {
+                secTime--;
+            }
+            else {
+                clearInterval(ticker);
+                getSeconds(); //start over
+            }
+
+            var days = Math.floor(secs / 86400);
+            secs %= 86400;
+            var hours = Math.floor(secs / 3600);
+            secs %= 3600;
+            var mins = Math.floor(secs / 60);
+            secs %= 60;
+
+            //update the time display
+            document.getElementById("days").innerHTML = curday;
+            document.getElementById("hours").innerHTML = ((hours < 10) ? "0" : "") + hours;
+            document.getElementById("minutes").innerHTML = ((mins < 10) ? "0" : "") + mins;
+            document.getElementById("seconds").innerHTML = ((secs < 10) ? "0" : "") + secs;
+        }
     </script>
     <script>
-        $({ Counter: 0 }).animate({
-            Counter: $('.Single').text()
-        }, {
-            duration: 4000,
-            easing: 'swing',
-            step: function() {
-                $('.Single').text(Math.ceil(this.Counter));
-            }
+        $(document).ready(function () {
+            getSeconds();
         });
     </script>
     <script>
