Our Billionaire added

--- a/index.html
+++ b/index.html
@@ -540,26 +540,38 @@
     <section class="container-fluid">
         <div class="row">
             <div class="col-lg-12 col-md-12 pt-4">
-                <h1 class="text-center">Our Esteemed Clients</h1>
+                <h1 class="text-center">Meet Our Billionaire Professors</h1>
                 <h4 class="text-center underline"></h4>
             </div>
-            <div class="col-2 pt-4 m-auto">
-                <img src="images/clients/2.png" class="img-fluid">
+            <div class="col-lg-2 col-6 pt-4 m-auto">
+                <img src="images/prof/1.jpg" class="img-fluid">
+                <h6 class="text-center m-0">Anand Kumar</h6>
+                <p class="text-center">Super 30</p>
             </div>
-            <div class="col-2 pt-4 m-auto">
-                <img src="images/clients/4.png" class="img-fluid">
+            <div class="col-lg-2 col-6 pt-4 m-auto">
+                <img src="images/prof/2.jpg" class="img-fluid">
+                <h6 class="text-center m-0">Acharya Balkrishna</h6>
+                <p class="text-center">Patanjali</p>
             </div>
-            <div class="col-2 pt-4 m-auto">
-                <img src="images/clients/8.png" class="img-fluid">
+            <div class="col-lg-2 col-6 pt-4 m-auto">
+                <img src="images/prof/3.jpg" class="img-fluid">
+                <h6 class="text-center m-0">Rahul Narvekar</h6>
+                <p class="text-center">India Ange Fund</p>
             </div>
-            <div class="col-2 pt-4 m-auto">
-                <img src="images/clients/11.jpg" class="img-fluid">
+            <div class="col-lg-2 col-6 pt-4 m-auto">
+                <img src="images/prof/4.jpg" class="img-fluid">
+                <h6 class="text-center m-0">Yashish Dahiya</h6>
+                <p class="text-center">Policy bazar</p>
             </div>
-            <div class="col-2 pt-4 m-auto">
-                <img src="images/clients/14.jpg" class="img-fluid">
+            <div class="col-lg-2 col-6 pt-4 m-auto">
+                <img src="images/prof/5.jpg" class="img-fluid">
+                <h6 class="text-center m-0">Anuradha Aharwal</h6>
+                <p class="text-center">Multibhashi</p>
             </div>
-            <div class="col-2 pt-4 m-auto">
-                <img src="images/clients/15.png" class="img-fluid">
+            <div class="col-lg-2 col-6 pt-4 m-auto">
+                <img src="images/prof/6.jpg" class="img-fluid">
+                <h6 class="text-center m-0">Samir Sathe</h6>
+                <p class="text-center">Wadhwani</p>
             </div>
         </div>
     </section>
