--- a/index.html
+++ b/index.html
@@ -257,50 +257,103 @@
                 <div class="col-lg-6 col-md-6 pt-2 pb-2">
                     <div class="card checkbox-card">
                         <div class="card-body">
-                            <input type="checkbox" id="checkbox1" name="checkbox1" value="1">
-                            <label class="card-text d-inline">I want to build my successful startup but i have no idea where
-                                to start.</label>
+                            <div class="row">
+                                <div class="col-1 d-flex justify-content-center">
+                                    <label class="checkbox-label">
+                                        <input type="checkbox">
+                                        <span class="checkbox-custom"></span>
+                                    </label>
+                                </div>
+                                <div class="col-11">
+                                    <label class="card-text d-inline">I want to build my successful startup but i have no idea where to start.</label>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-6 pt-2 pb-2">
                     <div class="card checkbox-card">
                         <div class="card-body">
-                            <input type="checkbox" id="checkbox1" name="checkbox1" value="1">
-                            <label class="card-text d-inline">I want to learn strategies that can help me to grow my
-                                existing startup</label>
+                            <div class="row">
+                                <div class="col-1 d-flex justify-content-center">
+                                    <label class="checkbox-label">
+                                        <input type="checkbox">
+                                        <span class="checkbox-custom"></span>
+                                    </label>
+                                </div>
+                                <div class="col-11">
+                                    <label class="card-text d-inline">I want to learn strategies that can help me to grow my
+                                        existing startup</label>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-6 pt-2 pb-2">
                     <div class="card checkbox-card">
                         <div class="card-body">
-                            <input type="checkbox" id="checkbox1" name="checkbox1" value="1">
-                            <label class="card-text d-inline">I want to raise funds for my startup</label>
+                            <div class="row">
+                                <div class="col-1 d-flex justify-content-center">
+                                    <label class="checkbox-label">
+                                        <input type="checkbox">
+                                        <span class="checkbox-custom"></span>
+                                    </label>
+                                </div>
+                                <div class="col-11">
+                                    <label class="card-text d-inline">I want to raise funds for my startup</label>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-6 pt-2 pb-2">
                     <div class="card checkbox-card">
                         <div class="card-body">
-                            <input type="checkbox" id="checkbox1" name="checkbox1" value="1">
-                            <label class="card-text d-inline">I want to get my first 1000 customers</label>
+                            <div class="row">
+                                <div class="col-1 d-flex justify-content-center">
+                                    <label class="checkbox-label">
+                                        <input type="checkbox">
+                                        <span class="checkbox-custom"></span>
+                                    </label>
+                                </div>
+                                <div class="col-11">
+                                    <label class="card-text d-inline">I want to get my first 1000 customers</label>
+                                </div>
+                            </div>     
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-6 pt-2 pb-2">
                     <div class="card checkbox-card">
                         <div class="card-body">
-                            <input type="checkbox" id="checkbox1" name="checkbox1" value="1">
-                            <label class="card-text d-inline">I want to avoid mistakes that leades to startup failure</label>
+                            <div class="row">
+                                <div class="col-1 d-flex justify-content-center">
+                                    <label class="checkbox-label">
+                                        <input type="checkbox">
+                                        <span class="checkbox-custom"></span>
+                                    </label>
+                                </div>
+                                <div class="col-11">
+                                    <label class="card-text d-inline">I want to avoid mistakes that leades to startup failure</label>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-6 pt-2 pb-2">
                     <div class="card checkbox-card">
                         <div class="card-body">
-                            <input type="checkbox" id="checkbox1" name="checkbox1" value="1">
-                            <label class="card-text d-inline">I want to know how to scale my startup to next level</label>
+                            <div class="row">
+                                <div class="col-1 d-flex justify-content-center">
+                                    <label class="checkbox-label">
+                                        <input type="checkbox">
+                                        <span class="checkbox-custom"></span>
+                                    </label>
+                                </div>
+                                <div class="col-11">
+                                    <label class="card-text d-inline">I want to know how to scale my startup to next level</label>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
