--- a/index.html
+++ b/index.html
@@ -264,8 +264,8 @@
                                         <span class="checkbox-custom"></span>
                                     </label>
                                 </div>
-                                <div class="col-11">
-                                    <label class="card-text d-inline">I want to build my successful startup but i have no idea where to start.</label>
+                                <div class="mbox col-11">
+                                    <label class="card-text">I want to build my successful startup but i have no idea where to start.</label>
                                 </div>
                             </div>
                         </div>
@@ -281,8 +281,8 @@
                                         <span class="checkbox-custom"></span>
                                     </label>
                                 </div>
-                                <div class="col-11">
-                                    <label class="card-text d-inline">I want to learn strategies that can help me to grow my
+                                <div class="mbox col-11">
+                                    <label class="card-text">I want to learn strategies that can help me to grow my
                                         existing startup</label>
                                 </div>
                             </div>
@@ -299,8 +299,8 @@
                                         <span class="checkbox-custom"></span>
                                     </label>
                                 </div>
-                                <div class="col-11">
-                                    <label class="card-text d-inline">I want to raise funds for my startup</label>
+                                <div class="mbox col-11">
+                                    <label class="card-text">I want to raise funds for my startup</label>
                                 </div>
                             </div>
                         </div>
@@ -316,8 +316,8 @@
                                         <span class="checkbox-custom"></span>
                                     </label>
                                 </div>
-                                <div class="col-11">
-                                    <label class="card-text d-inline">I want to get my first 1000 customers</label>
+                                <div class="mbox col-11">
+                                    <label class="card-text">I want to get my first 1000 customers</label>
                                 </div>
                             </div>     
                         </div>
@@ -333,8 +333,8 @@
                                         <span class="checkbox-custom"></span>
                                     </label>
                                 </div>
-                                <div class="col-11">
-                                    <label class="card-text d-inline">I want to avoid mistakes that leades to startup failure</label>
+                                <div class="mbox col-11">
+                                    <label class="card-text">I want to avoid mistakes that leades to startup failure</label>
                                 </div>
                             </div>
                         </div>
@@ -350,8 +350,8 @@
                                         <span class="checkbox-custom"></span>
                                     </label>
                                 </div>
-                                <div class="col-11">
-                                    <label class="card-text d-inline">I want to know how to scale my startup to next level</label>
+                                <div class="mbox col-11">
+                                    <label class="card-text">I want to know how to scale my startup to next level</label>
                                 </div>
                             </div>
                         </div>
@@ -636,7 +636,7 @@
 
         function getSeconds() {
             var nowDate = new Date();
-            var dy = 2; //Sunday through Saturday, 0 to 6
+            var dy = 6; //Sunday through Saturday, 0 to 6
             var countertime = new Date(nowDate.getFullYear(), nowDate.getMonth(), nowDate.getDate(), 20, 0, 0); //20 out of 24 hours = 8pm
 
             var curtime = nowDate.getTime(); //current time
